--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,6 +17,17 @@ body{
     font-weight: 700;
     padding: 15px 35px;
 }
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 10px;
+}
 
 /*nav related styles*/
 nav{
@@ -45,12 +56,14 @@ nav a{
 
 /*header related styles*/
 .header{
-    background-color: #;
+    background-color: #FFF8F3;
+    
 }
 .banner{
     padding: 30px 30px 30px 150px ;
     display:flex ;
     align-items: center;
+    justify-content:space-between ;
 }
 
 
@@ -58,4 +71,27 @@ nav a{
     width: 250px;
 
 }
+.banner-content{
+    max-width: 500px;
+}
+.banner-greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+.banner-title{
+    font-size: 65px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
 
+/*main section styles*/
+
+/*about section styles*/
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin-top: 130px;
+}
