--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -87,6 +87,11 @@ nav a{
 }
 
 /*main section styles*/
+.main{
+    max-width: 1140px;
+    margin: auto;
+}
+
 
 /*about section styles*/
 .about{
@@ -94,4 +99,12 @@ nav a{
     border-radius: 10px;
     background: #FFF8F3;
     margin-top: 130px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+    
 }
