--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -154,6 +154,7 @@ nav a{
 }
 .resume-item-institute,.resume-item-description{
     color: #757575;
+    
 }
 .resume-container hr{
     margin: 30px;
@@ -161,4 +162,11 @@ nav a{
 .download-cv{
     text-align: center;
     margin-top: 50px;
+}
+/*footer style*/
+.footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
 }
