--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,6 +22,7 @@ body{
     text-align: center;
     font-size: 35px;
     font-weight: 700;
+    
 }
 .section-description{
     color: #757575;
@@ -166,7 +167,27 @@ nav a{
 /*footer style*/
 .footer{
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     padding: 130px 200px;
     margin-top: 100px;
+    
 }
+.footer-colum{
+    width: 50%;
+}
+.contact input,textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    color: #474747;
+    background: #FFF8F3;
+
+    
+    
+}
+.contact
+
+    
